Revamped resto, A BIT more flexible :P
Added extra character to subcontent of info items for a better
view/seperation.

--- a/WP/Hydra/Pages/InfoItemSubcontent.xaml
+++ b/WP/Hydra/Pages/InfoItemSubcontent.xaml
@@ -53,7 +53,7 @@
                 <phone:LongListSelector.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="0,-6,0,12">
-                            <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextTitle1Style}" FontSize="{StaticResource PhoneFontSizeExtraLarge}"/>
+                            <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextNormalStyle}" FontSize="{StaticResource PhoneFontSizeLarge}"/>
                         </StackPanel>
                     </DataTemplate>
                 </phone:LongListSelector.ItemTemplate>
