--- a/WP/Hydra/Pages/MainPage.xaml
+++ b/WP/Hydra/Pages/MainPage.xaml
@@ -26,15 +26,6 @@
             <shell:ApplicationBarIconButton x:Name="settingsAppBar" IconUri="/Assets/AppBar/settings.png" Text="Instellingen" Click="SettingsAppBar"/>
         </shell:ApplicationBar>
 
-        <!--<shell:ApplicationBar x:Key="UrgentAppBar" IsVisible="True">
-            <shell:ApplicationBarIconButton x:Name="settingsUrgentAppBar" IconUri="/Assets/AppBar/settings.png" Text="Instellingen" Click="SettingsAppBar"/>
-            <shell:ApplicationBarIconButton x:Name="PlayUrgentAppBar" IconUri="/Assets/AppBar/transport.play.png" Text="Afspelen" Click="PlayButtonAppBar"/>
-            <shell:ApplicationBarIconButton x:Name="PauseUrgentAppBar" IconUri="/Assets/AppBar/transport.pause.png" Text="Pauzeren" Click="PauseButtonAppBar"/>
-            <shell:ApplicationBarIconButton x:Name="StopUrgentAppBar" IconUri="/Assets/AppBar/stop.png" Text="Stoppen" Click="StopButtonAppBar"/>
-        </shell:ApplicationBar>-->
-
-
-
         <DataTemplate x:Key="ActivityGroupHeaderTemplate">
             <Border Background="Transparent" Padding="5" Visibility="{Binding Path=.,Converter={StaticResource objectHeaderActivityToVisbility},ConverterParameter=activityHeader}">
                 <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="{StaticResource PhoneAccentBrush}" BorderThickness="2" Margin="0,0,18,0" HorizontalAlignment="Left">
@@ -117,8 +108,11 @@
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-
+    <!--Background="Transparent"-->
+    <Grid x:Name="LayoutRoot" >
+        <Grid.Background>
+            <ImageBrush ImageSource="/Assets/hydraBackGroundDark.png"></ImageBrush>
+        </Grid.Background>
         <phone:Pivot x:Name="mainPivot" Title="{Binding LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}"  SelectionChanged="MainPivotSelectionChangedShowApplicationBar">
 
             <phone:PivotItem x:Name="news" Header="Nieuws" >
@@ -152,7 +146,7 @@
                                         LayoutMode="List" SelectionChanged="ActivityItemTapped">
                     <phone:LongListSelector.ItemTemplate>
                         <DataTemplate>
-                            
+
                             <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Width="432" Visibility="{Binding Path=.,Converter={StaticResource objectToVisbility}}">
                                 <TextBlock x:Name="startHour"  Width="99" Height="99"  Grid.Row="1"  FontSize="{StaticResource PhoneFontSizeLarge}" Text="{Binding GetStartHour}"/>
                                 <StackPanel Width="350" Margin="8,-7,0,0">
@@ -164,50 +158,51 @@
                     </phone:LongListSelector.ItemTemplate>
                 </phone:LongListSelector>
             </phone:PivotItem>
-            
-            
-            <phone:PivotItem x:Name="resto" Header="Resto Menu" Height="611">
-                <Grid HorizontalAlignment="Left" Height="483" VerticalAlignment="Top" Width="420" x:Name="gridResto" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Date}" VerticalAlignment="Top" Margin="10,10,0,0" Height="30" Width="360"/>
-
-                    <Image HorizontalAlignment="Left" Height="60" Margin="10,50,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-meal@2x.png"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="75,70,0,0" Height="26" Width="152" RenderTransformOrigin="1.449,0.154">
-    					<Run Text="Vlees en Veggie"/>
-    					<LineBreak/>
-    					<Run/>
-                    </TextBlock>
-                    <TextBlock HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Dishes[0].Name}" VerticalAlignment="Top" Margin="10,110,0,0" Height="26" Width="288" Style="{Binding Dishes[0].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[1].Name}" VerticalAlignment="Top" Margin="10,135,0,0" Height="26" Width="288" Style="{Binding Dishes[1].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[2].Name}" VerticalAlignment="Top" Margin="10,160,0,0" Height="26" Width="288" Style="{Binding Dishes[2].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[3].Name}" VerticalAlignment="Top" Margin="10,185,0,0" Height="26" Width="288" Style="{Binding Dishes[3].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}"/>
-
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[0].Price}" VerticalAlignment="Top" Margin="334,110,0,0" Height="26" Width="76"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[1].Price}" VerticalAlignment="Top" Margin="334,135,0,0" Height="26" Width="76"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[2].Price}" VerticalAlignment="Top" Margin="334,160,0,0" Height="26" Width="76" RenderTransformOrigin="1.944,1.692"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Dishes[3].Price}" VerticalAlignment="Top" Margin="334,185,0,0" Height="26" Width="76"/>
 
 
-                    <Image HorizontalAlignment="Left" Height="60" Margin="10,225,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-soup@2x.png"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="75,245,0,0" Height="26" Width="107" RenderTransformOrigin="1.449,0.154">
-    					<Run Text="Soep"/>
-    					<LineBreak/>
-    					<Run/>
-                    </TextBlock>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Soup[0]}" VerticalAlignment="Top" Margin="10,285,0,0" Height="26" Width="293"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Soup[1]}" VerticalAlignment="Top" Margin="334,285,0,0" Height="26" Width="76" RenderTransformOrigin="1.944,1.692"/>
+            <phone:PivotItem x:Name="resto" Header="Resto Menu" Margin="10,-29,14,-2">
+                    <Grid HorizontalAlignment="Left" Height="648" Margin="10,10,0,-22" VerticalAlignment="Top" Width="436">
+                        <Grid HorizontalAlignment="Left" Height="71" Margin="10,10,0,0" VerticalAlignment="Top" Width="416">
+                            <TextBlock  x:Name="OpenDate" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}" Text="{Binding Date}" FontSize="{StaticResource PhoneFontSizeLarge}" Margin="0,1,10,10"/>
+                            <TextBlock  x:Name="ClosedDate" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility},ConverterParameter=closed}" TextWrapping="Wrap" Text="Gesloten" FontSize="{StaticResource PhoneFontSizeLarge}" Margin="10,1,10,10"/>
+                        </Grid>
+                    <Grid HorizontalAlignment="Left" Height="213" Margin="10,45,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
+                            <Image x:Name="ImageMeat" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-meal@2x.png"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Vlees en Veggie" VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Dishes[0].Name}"  Style="{Binding Dishes[0].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Dishes[1].Name}"  Style="{Binding Dishes[1].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,139,0,0" TextWrapping="Wrap" Text="{Binding Dishes[2].Name}"  Style="{Binding Dishes[2].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,171,0,0" TextWrapping="Wrap" Text="{Binding Dishes[3].Name}"  Style="{Binding Dishes[3].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,75,0,0" TextWrapping="Wrap" Text="{Binding Dishes[0].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,107,0,0" TextWrapping="Wrap" Text="{Binding Dishes[1].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,139,0,0" TextWrapping="Wrap" Text="{Binding Dishes[2].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,171,0,0" TextWrapping="Wrap" Text="{Binding Dishes[3].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
+                        </Grid>
+                    <Grid HorizontalAlignment="Left" Height="141" Margin="10,258,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
+                            <Image x:Name="ImageSoup" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-soup@2x.png"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Soep" VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[0]}"  VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[2]}"  VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[1]}" VerticalAlignment="Top" Height="27" Width="72"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="334,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[3]}" VerticalAlignment="Top" Height="27" Width="72"/>
+                    </Grid>
+                    <Grid HorizontalAlignment="Left" Height="239" Margin="10,399,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
+                            <Image x:Name="ImageVeg" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-vegetables@2x.png"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Groenten" VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[0]}"  VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[1]}"  VerticalAlignment="Top" Width="319"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,139,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[2]}"  VerticalAlignment="Top" Width="319"/>
+                    </Grid>
+                    </Grid>
 
 
-                    <Image HorizontalAlignment="Left" Height="60" Margin="10,325,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-vegetables@2x.png"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="75,345,0,0" Height="26" Width="107" RenderTransformOrigin="1.449,0.154" Text="Groenten"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Vegetables[0]}" VerticalAlignment="Top" Margin="10,385,0,0" Height="26" Width="288"/>
-                    <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Vegetables[1]}" VerticalAlignment="Top" Margin="10,410,0,0" Height="26" Width="288"/>
-
-                    
-                    <TextBlock x:Name="Closed" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility},ConverterParameter=closed}" HorizontalAlignment="Left" Margin="12,1,0,0" TextWrapping="Wrap" Text="Gesloten" VerticalAlignment="Top" Width="358"/>
 
 
-                </Grid>
             </phone:PivotItem>
+            
+            
+            
+            
             <phone:PivotItem x:Name="info" Header="Info">
 
                 <phone:LongListSelector x:Name="infoLLS" Margin="0,-38,-22,2" ItemsSource="{Binding InfoItems}" SelectionChanged="InfoItemTapped">
@@ -245,7 +240,7 @@
 
             <phone:PivotItem x:Name="urgent" Header="URGENT.fm" Margin="12,10,12,0">
                 <Grid>
-                    
+
                     <Image HorizontalAlignment="Left" Height="264" Margin="82,123,0,0" VerticalAlignment="Top" Width="264" Source="/Assets/btn-urgent-bg-highlighted@2x.png"/>
                     <Button  x:Name="Play" Height="120" Margin="155,190,181,0" VerticalAlignment="Top" Width="120" BorderThickness="0" Click="PlayButton" ClickMode="Press">
                         <Button.Background>
@@ -260,11 +255,11 @@
                     <TextBlock HorizontalAlignment="Left" Margin="22,385,0,0" TextWrapping="Wrap"  x:Name="NowPlayingTrack" VerticalAlignment="Top" Width="424" Height="81" />
                     <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Name="NowPlayingProgram" VerticalAlignment="Top" Width="436" Height="108" FontSize="{StaticResource PhoneFontSizeLarge}"/>
                 </Grid>
-                
+
             </phone:PivotItem>
 
         </phone:Pivot>
-        
+
 
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
 
