--- a/WP/Hydra/Pages/MainPage.xaml
+++ b/WP/Hydra/Pages/MainPage.xaml
@@ -110,9 +110,9 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <!--Background="Transparent"-->
     <Grid x:Name="LayoutRoot" >
-        <Grid.Background>
+        <!--<Grid.Background>
             <ImageBrush ImageSource="/Assets/hydraBackGroundDark.png"></ImageBrush>
-        </Grid.Background>
+        </Grid.Background>-->
         <phone:Pivot x:Name="mainPivot" Title="{Binding LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}"  SelectionChanged="MainPivotSelectionChangedShowApplicationBar">
 
             <phone:PivotItem x:Name="news" Header="Nieuws" >
@@ -167,8 +167,8 @@
                             <TextBlock  x:Name="ClosedDate" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility},ConverterParameter=closed}" TextWrapping="Wrap" Text="Gesloten" FontSize="{StaticResource PhoneFontSizeLarge}" Margin="10,1,10,10"/>
                         </Grid>
                     <Grid HorizontalAlignment="Left" Height="213" Margin="10,45,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
-                            <Image x:Name="ImageMeat" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-meal@2x.png"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Vlees en Veggie" VerticalAlignment="Top"/>
+                            <Image x:Name="ImageMeat" HorizontalAlignment="Left" Height="60" Margin="15,15,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-meal@2x.png" RenderTransformOrigin="0.433,0.883"/>
+                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Vlees en Veggie" VerticalAlignment="Top" Style="{StaticResource PhoneTextLargeStyle}"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Dishes[0].Name}"  Style="{Binding Dishes[0].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Dishes[1].Name}"  Style="{Binding Dishes[1].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,139,0,0" TextWrapping="Wrap" Text="{Binding Dishes[2].Name}"  Style="{Binding Dishes[2].IsRecommended, Converter={StaticResource booleanToStyle},ConverterParameter=resto, Mode=OneWay}" VerticalAlignment="Top" Width="319"/>
@@ -178,26 +178,26 @@
                         <TextBlock HorizontalAlignment="Left" Margin="334,139,0,0" TextWrapping="Wrap" Text="{Binding Dishes[2].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
                         <TextBlock HorizontalAlignment="Left" Margin="334,171,0,0" TextWrapping="Wrap" Text="{Binding Dishes[3].Price}" VerticalAlignment="Top" Height="27" Width="72"/>
                         </Grid>
-                    <Grid HorizontalAlignment="Left" Height="141" Margin="10,258,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
-                            <Image x:Name="ImageSoup" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-soup@2x.png"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Soep" VerticalAlignment="Top"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[0]}"  VerticalAlignment="Top" Width="319"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[2]}"  VerticalAlignment="Top" Width="319"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="334,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[1]}" VerticalAlignment="Top" Height="27" Width="72"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="334,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[3]}" VerticalAlignment="Top" Height="27" Width="72"/>
+                    <Grid HorizontalAlignment="Left" Height="118" Margin="10,263,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="4*"/>
+                            <ColumnDefinition Width="9*"/>
+                        </Grid.ColumnDefinitions>
+                        <Image x:Name="ImageSoup" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-soup@2x.png"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Soep" VerticalAlignment="Top" Style="{StaticResource PhoneTextLargeStyle}" Grid.ColumnSpan="2" Width="123"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[0]}"  VerticalAlignment="Top" Width="319" Grid.ColumnSpan="2"/>
+                        <!--<TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[2]}"  VerticalAlignment="Top" Width="319"/>-->
+                        <TextBlock HorizontalAlignment="Left" Margin="206,75,0,0" TextWrapping="Wrap" Text="{Binding Soup[1]}" VerticalAlignment="Top" Height="27" Width="72" Grid.Column="1"/>
+                        <!--<TextBlock HorizontalAlignment="Left" Margin="334,107,0,0" TextWrapping="Wrap" Text="{Binding Soup[3]}" VerticalAlignment="Top" Height="27" Width="72"/>-->
                     </Grid>
-                    <Grid HorizontalAlignment="Left" Height="239" Margin="10,399,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
+                    <Grid HorizontalAlignment="Left" Height="239" Margin="10,386,0,0" VerticalAlignment="Top" Width="416" Visibility="{Binding IsOpen,Converter={StaticResource booleanToVisibility}}">
                             <Image x:Name="ImageVeg" HorizontalAlignment="Left" Height="60" Margin="10,10,0,0" VerticalAlignment="Top" Width="60" Source="/Assets/icon-vegetables@2x.png"/>
-                            <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Groenten" VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="75,24,0,0" TextWrapping="Wrap" Text="Groenten" VerticalAlignment="Top" Style="{StaticResource PhoneTextLargeStyle}"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[0]}"  VerticalAlignment="Top" Width="319"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[1]}"  VerticalAlignment="Top" Width="319"/>
                         <TextBlock HorizontalAlignment="Left" Margin="10,139,0,0" TextWrapping="Wrap" Text="{Binding Vegetables[2]}"  VerticalAlignment="Top" Width="319"/>
                     </Grid>
                     </Grid>
-
-
-
-
             </phone:PivotItem>
             
             
@@ -209,8 +209,7 @@
                     <phone:LongListSelector.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Width="432">
-
-                                <Image x:Name="Image"  Width="104" Height="105"  Grid.Row="1" Stretch="UniformToFill" Source="{Binding Image}"/>
+                                <Image x:Name="Image"  Width="90" Height="90"  Grid.Row="1" Stretch="UniformToFill" Source="{Binding Image}"/>
                                 <StackPanel Width="311" Margin="8,-7,0,0">
                                     <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Margin="10,30,10,0" Style="{StaticResource PhoneTextLargeStyle}" />
                                 </StackPanel>
@@ -238,16 +237,16 @@
 
             </phone:PivotItem>
 
-            <phone:PivotItem x:Name="urgent" Header="URGENT.fm" Margin="12,10,12,0">
+            <phone:PivotItem x:Name="urgent" Header="Urgent.fm" Margin="12,10,12,0">
                 <Grid>
 
                     <Image HorizontalAlignment="Left" Height="264" Margin="82,123,0,0" VerticalAlignment="Top" Width="264" Source="/Assets/btn-urgent-bg-highlighted@2x.png"/>
-                    <Button  x:Name="Play" Height="120" Margin="155,190,181,0" VerticalAlignment="Top" Width="120" BorderThickness="0" Click="PlayButton" ClickMode="Press">
+                    <Button  x:Name="Play" Height="150" Margin="138,176,168,0" VerticalAlignment="Top" Width="150" BorderThickness="0" Click="PlayButton" ClickMode="Press">
                         <Button.Background>
                             <ImageBrush ImageSource="/Assets/btn-urgent-play@2x.png"/>
                         </Button.Background>
                     </Button>
-                    <Button  x:Name="Pause" Height="120" Margin="155,190,181,0" VerticalAlignment="Top" Visibility="Collapsed"  Width="120" BorderThickness="0" Click="StopButton" ClickMode="Press">
+                    <Button  x:Name="Pause" Height="150" Margin="138,176,168,0" VerticalAlignment="Top" Visibility="Collapsed"  Width="150" BorderThickness="0" Click="StopButton" ClickMode="Press">
                         <Button.Background>
                             <ImageBrush ImageSource="/Assets/btn-urgent-pause@2x.png"/>
                         </Button.Background>
@@ -261,7 +260,7 @@
         </phone:Pivot>
 
 
-        <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
+        
 
     </Grid>
 </phone:PhoneApplicationPage>
