--- a/WP/Hydra/Pages/RestoLocations.xaml
+++ b/WP/Hydra/Pages/RestoLocations.xaml
@@ -55,7 +55,7 @@
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Width="432">
                             <StackPanel Width="311" Margin="8,-7,0,0">
-                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Margin="10,0" Style="{StaticResource PhoneTextTitle2Style}" FontSize="{StaticResource PhoneFontSizeLarge}" />
+                                <TextBlock Text="{Binding Name}" TextWrapping="NoWrap"  Style="{StaticResource PhoneTextTitle2Style}" FontSize="{StaticResource PhoneFontSizeLarge}" />
                                 <TextBlock Text="{Binding Address}" TextWrapping="Wrap" Margin="10,-2,10,0" />
                             </StackPanel>
                         </StackPanel>
