--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -93,12 +93,17 @@ h1 {
 }
 a#store-ios {
     background: url(../img/store-ios.png) no-repeat left top;
-    width: 179px;
-    margin-right: 15px; margin-bottom: 10px;
+    width: 149px;
+    margin-right: 15px;
 }
 a#store-android {
     background: url(../img/store-android.png) no-repeat left top;
-    width: 172px;
+    width: 142px;
+    margin-right: 15px;
+}
+a#store-wp8 {
+    background: url(../img/store-windows.png) no-repeat left top;
+    width: 140px;
 }
 
 @media (max-width: 767px) {
