--- a/android/res/layout/activity_list.xml
+++ b/android/res/layout/activity_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.hydra"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.hydra"
+    android:id="@+id/activity_list_container"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     
     <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
@@ -11,4 +13,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"/>
-</LinearLayout>
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
