--- a/android/res/values/color.xml
+++ b/android/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="ugent_blue_dark">#0A1E60</color>
     <color name="ugent_blue_medium">#5365A0</color>
     <color name="ugent_blue_light">#DEE3EF</color>
+    <color name="ugent_blue_highlight">#19A3D2</color>
     <color name="ugent_yellow_dark">#FFB300</color>
     <color name="ugent_white">#EAEAEA</color>
     
