--- a/android/res/layout/activity_item.xml
+++ b/android/res/layout/activity_item.xml
@@ -345,7 +345,6 @@
             android:layout_height="1dp"
             
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             
             android:background="@color/ugent_grey_light"
         />
@@ -356,9 +355,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             
-            android:orientation="horizontal"
-        
-            android:paddingBottom="10dp">
+            android:orientation="horizontal">
             
             <TextView android:id="@+id/activity_item_more_content_title"
         
@@ -367,6 +364,8 @@
                       android:layout_weight="1"
                   
                       android:gravity="right"
+                      android:paddingTop="10dp"
+                      android:paddingBottom="10dp"
                       
                       android:text="@string/activity_item_more_content_title"
                       android:textColor="@color/ugent_grey_dark">
@@ -378,8 +377,9 @@
                       android:layout_height="wrap_content"
                       android:layout_weight="3"
                       
-                      android:paddingLeft="10dp"
-                      android:paddingRight="10dp"
+                      android:background="@drawable/tabbable_textview"
+                      
+                      android:padding="10dp"
                       
                       android:textColorHighlight="#000000"
                       android:focusable="true"
