--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -71,15 +71,22 @@ html, body {
 }
 
 h1 {
-    width: 214px; height: 80px;
-    background: url(../img/hydra-logo.png) no-repeat;
-    background-size: 214px 80px;
-    margin: 10px 0;
+    width: 347px; height: 80px;
+    background: url(../img/ugent-logo.png) top left no-repeat, url(../img/hydra-logo.png) bottom right no-repeat;
+    background-size: 113px 80px, 214px 80px;
+}
+@media (max-width: 970px) {
+    h1 {
+        width: 100%; height: 150px;
+        background-size: 113px 80px,160px 60px;
+        background-position: top center, bottom center;
+    }
 }
 @media (max-width: 767px) {
     h1 {
-        width: 107px; height: 40px;
-        background-size: 107px 40px;
+        width: 293px; height: 80px;
+        background-size: 113px 80px, 160px 60px;
+        background-position: top left, bottom right;
     }
 }
 
