--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -1,190 +1,148 @@
 /* Custom colors */
-body { color: #ffffff; }
-a { color: #eebd3c; }
-a:hover { color: #fed563; }
+body {
+  color: #ffffff;
+}
+
+a {
+  color: #eebd3c;
+}
+
+a:hover {
+  color: #fed563;
+}
 
 /* Font sizes on mobile devices */
 @media (max-width: 767px) {
-    body {
-        font-size: 12px;
-        line-height: 16px;
-    }
-    .lead {
-        font-size: 16px;
-        line-height: 20px;
-    }
+  body {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .lead {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 /* Background image */
 @media (max-width: 320px) {
-    body {
-        background: url(../img/therminal-xsmall.jpg) no-repeat center center fixed;
-    }
-}
-@media (max-width: 767px) {
-    body {
-        background: url(../img/therminal-small.jpg) no-repeat center center fixed;
-    }
-}
-@media (min-width: 768px) {
-    body {
-        background: url(../img/therminal.jpg) no-repeat center center fixed;
-    }
-}
-body {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  body {
+    background: url(../img/therminal-xsmall.jpg) no-repeat center center fixed;
+  }
 }
 
-/* Sticky footer */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+@media (max-width: 767px) {
+  body {
+    background: url(../img/therminal-small.jpg) no-repeat center center fixed;
+  }
 }
-#container {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -40px;
+
+@media (min-width: 768px) {
+  body {
+    background: url(../img/therminal.jpg) no-repeat center center fixed;
+  }
 }
-#footer-push {
-    height: 60px;
+
+body {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Content */
 @media (min-width: 768px) {
-    #container > .row-fluid {
-        margin-top: 20px;
-    }
+  .top-row {
+    margin-top: 20px;
+  }
+}
+
+.content-card {
+  background: #1e64c8;
 }
 
 .content-block {
-    background-color: #000000;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px 40px 10px 20px;
-}
-.content-block:first {
-    margin-top: 20px;
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 10px 40px 10px 20px;
 }
 
-h1 {
-    width: 347px; height: 80px;
-    background: url(../img/ugent-logo.png) top left no-repeat, url(../img/hydra-logo.png) bottom right no-repeat;
-    background-size: 113px 80px, 214px 80px;
-}
-@media (max-width: 970px) {
-    h1 {
-        width: 100%; height: 150px;
-        background-size: 113px 80px,160px 60px;
-        background-position: top center, bottom center;
-    }
-}
-@media (max-width: 767px) {
-    h1 {
-        width: 293px; height: 80px;
-        background-size: 113px 80px, 160px 60px;
-        background-position: top left, bottom right;
-    }
+.card {
+  border: none;
+  border-radius: 0;
 }
 
-#store-links {
-    margin: 25px 15px;
-}
-#store-links a {
-    display: block;
-    float: left;
-    height: 60px;
-}
-a#store-ios {
-    background: url(../img/store-ios.png) no-repeat left top;
-    width: 149px;
-    margin-right: 15px;
-}
-a#store-android {
-    background: url(../img/store-android.png) no-repeat left top;
-    width: 142px;
-    margin-right: 15px;
-}
-a#store-wp8 {
-    background: url(../img/store-windows.png) no-repeat left top;
-    width: 140px;
+.badge-card {
+  background: none;
 }
 
-@media (max-width: 767px) {
-    #store-links a {
-        height: 45px;
-        -webkit-background-size: contain;
-        -moz-background-size: contain;
-        -o-background-size: contain;
-        background-size: contain;
-    }
-    a#store-ios { width: 134px; }
-    a#store-android { width: 129px; }
+.badge-card a {
+  display: block;
+  float: left;
+  height: 60px;
+  margin-right: 20px;
 }
 
-#footer {
-    height: 40px;
-    line-height: 40px;
-    padding: 0 40px;
-    overflow: hidden;
+.badge-card a img {
+  height: auto;
+  max-width: 200px;
 }
-#footer p {
-    float: left;
-}
-#footer p.text-right {
-    float: right;
+
+footer {
+  background: black;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 /* Carousel */
 .carousel-wrapper {
-    width: 358px;
-    margin: 20px auto;
+  width: 358px;
+  margin: 20px auto;
 }
 
 .carousel {
-    position: absolute;
+  position: absolute;
 }
 
 .carousel-frame {
-    height: 885px;
-    width: 100%;
-    background: url(../img/iphone2-frame.png) no-repeat;
-    z-index: 100;
-    background-size: contain;
+  height: 885px;
+  width: 100%;
+  background: url(../img/iphone2-frame.png) no-repeat;
+  z-index: 100;
+  background-size: contain;
 }
 
 .carousel .slides img {
-    display: block;
-    width: 302px;
+  display: block;
+  width: 302px;
 }
 
 .flex-viewport, .flex-control-nav {
-    width: 302px;
-    position: relative;
-    top: 126px; left: 31px;
+  width: 302px;
+  position: relative;
+  top: 126px;
+  left: 31px;
 }
+
 .flex-control-nav {
-    top: 260px;
+  top: 260px;
 }
 
 @media (max-width: 767px) {
-    .carousel-wrapper, .carousel-frame {
-        width: 268px;
-        height: 525px;
-        -webkit-background-size: contain;
-        -moz-background-size: contain;
-        -o-background-size: contain;
-        background-size: contain;
-    }
+  .carousel-wrapper, .carousel-frame {
+    width: 268px;
+    height: 525px;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+  }
 
-    .carousel .slides img, .flex-viewport {
-        width: 300px;
-    }
+  .carousel .slides img, .flex-viewport {
+    width: 300px;
+  }
 
-    .flex-control-nav {
-        display: none;
-    }
+  .flex-control-nav {
+    display: none;
+  }
 }
