--- a/server/static/website/css/text.css
+++ b/server/static/website/css/text.css
@@ -16,8 +16,11 @@ h1, h2, h3, h4, h5, h6 {
     color: #1E64C8;
 }
 
-h2, h3 {
+hr {
     margin-top: 2em;
+    margin-bottom: 2em;
+    max-width: 800px;
+    margin-left: 0;
 }
 
 .example {
