--- a/server/static/website/css/custom.css
+++ b/server/static/website/css/custom.css
@@ -99,8 +99,9 @@ footer {
 
 .partner-logo {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     max-width: 150px;
+    max-height: 75px;
 }
 
 .partner-row {
